--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.20.1",
+    "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
