--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "@tailwindcss/forms": "^0.5.7",
-    "chart.js": "^4.4.1",
-    "chartjs-adapter-moment": "^1.0.1",
+    "axios": "^1.7.2",
     "flowbite-react": "^0.9.0",
-    "moment": "^2.29.4",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-circle-progress-bar": "^0.1.4",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
+    "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.20.1",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5"
   },
