--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "flowbite-react": "^0.9.0",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-circle-progress-bar": "^0.1.4",
     "react-dom": "^18.2.0",
