--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "flowbite-react": "^0.9.0",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-circle-progress-bar": "^0.1.4",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-icons": "^5.2.1",
@@ -24,13 +27,14 @@
     "react-router-dom": "^6.20.1",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "^3.4.4",
     "vite": "^5.0.6"
   }
 }
