--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nivo/bar": "^0.87.0",
+    "@nivo/pie": "^0.87.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "flowbite-react": "^0.9.0",
+    "framer-motion": "^11.2.13",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
